# zype-python

./: .gitignore  README.md  pyproject.toml
tests/: config.ini  test_client.py
zype/: __init__.py  adapters.py  exceptions.py  resource_mapping.py  serializers.py  zype.py  zype_instantiator.py
