[tool.poetry]
name = "zype"
version = "0.3.0"
description = ""
authors = ["Darsh <contact.dshukla@gmail.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"
requests = {extras = ["security"], version = "^2.26.0"}
six = "^1.16.0"
xmltodict = "^0.12.0"
arrow = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
